Various AsyncFile improvements
Implemented delete

Resolved problem with double counting of nops.

Improved testing; especially metrics

Testing cleanup